# CppMT

./: .travis.yml  CMT.cpp  CMakeLists.txt  Consensus.cpp  Matcher.cpp  README.md  gui.cpp
getopt/: getopt.cpp
include/: CMT.h  Matcher.h  cmt_config.h.in  debug_utils.h  getopt.h  log.h
logging/: log.h
